fix(context-menu): menu rendering behind some elements

--- a/src/renderer/src/components/context-menu/ContextMenu.module.scss
+++ b/src/renderer/src/components/context-menu/ContextMenu.module.scss
@@ -7,7 +7,7 @@
 
    outline: none;
 
-   z-index: 3;
+   z-index: 6;
 }
 
 .contextMenuLayout {
